<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true" />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_marginTop="12dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Remember Me -->
    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginTop="12dp"/>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="12dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginTop="16dp"/>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginTop="12dp"/>

    <!-- Register Link -->
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_here"
        android:textColor="@color/green"
        android:layout_gravity="start"
        android:textSize="22sp"
        android:layout_marginTop="12dp"/>

</LinearLayout>